# medua-experiments

./: infer.py  medusa_model.py  medusa_model_onnx.py  medusaonnxrun.py  medusarun.py  modeling_llama_kv.py  pyproject.toml  run.py  serve.py  serve_medusa.py  utils.py
onnx-medusa/: __main__.py  convert_to_onnx.py  llama_inputs.py  llama_parity.py  llama_torch.py
