[project]
name = "medusa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "bitsandbytes>=0.44.1",
    "datasets>=2.8.0",
    "fastapi>=0.115.4",
    "gunicorn>=23.0.0",
    "huggingface-hub>=0.26.2",
    "olive-ai>=0.7.0",
    "onnx>=1.14.0",
    "onnxruntime==1.19.2",
    "optimum>=1.17.0",
    "protobuf==3.20.2",
    "sentencepiece>=0.2.0",
    "tabulate>=0.9.0",
    "tokenizers>=0.15.2",
    "torch>=2.5.1",
    "transformers>=4.33.2,<=4.37.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "mypy>=1.13.0",
    "py-spy>=0.4.0",
]
